# overture-geocoder

./: .gitignore  README.md  TODO.md  package-lock.json  package.json  vitest.config.ts
.github/actions/apply-d1-updates/: action.yml
.github/workflows/: data-update.yml  deploy-rust-worker.yml  deploy.yml  pages.yml  publish-js-client.yml  rebuild-db-swap.yml  rebuild-r2-shards.yml  schema-apply-forward.yml  schema-apply-reverse.yml  test-clients.yml
clients/js/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
clients/js/examples/: advanced-usage.ts  basic-usage.ts
clients/js/src/: duckdb-query.ts  index.test.ts  index.ts
clients/python/: pyproject.toml
clients/python/examples/: advanced_usage.py  basic_usage.py
clients/python/overture_geocoder/: __init__.py  client.py
clients/python/tests/: conftest.py  test_client.py
crates/: Cargo.toml
crates/geocoder-cli/: Cargo.toml
crates/geocoder-cli/src/: main.rs
crates/geocoder-core/: Cargo.toml
crates/geocoder-core/src/: database.rs  error.rs  lib.rs  types.rs
crates/geocoder-core/src/query/: bias.rs  fts.rs  merge.rs  mod.rs
crates/geocoder-core/tests/: search_integration.rs
crates/geocoder-worker/: Cargo.toml  README.md  wrangler.toml
crates/geocoder-worker/src/: handlers.rs  lib.rs  stac.rs
docs/: REBUILD_OPTIMIZATION_PLAN.md  index.html
scripts/: build_divisions_index.py  build_divisions_reverse_index.py  build_shards.py  create_test_fixture.py  diff_and_update.py  download_divisions.sh  download_divisions_area.sql  download_divisions_global.sql  export_to_sql.py  upload_shards.sh
src/: worker.ts
tests/: test_build_shards.py
tests/e2e/: globalSetup.ts  lookup.test.ts  search.test.ts  setup.ts
tests/fixtures/: divisions.db  test.db
