[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overture-geocoder"
version = "0.1.0"
description = "Forward geocoder using Overture Maps data with Nominatim-compatible API"
readme = { text = "Forward geocoder using Overture Maps data with Nominatim-compatible API", content-type = "text/plain" }
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Brad Richardson" }
]
keywords = ["geocoding", "overture", "maps", "nominatim"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
geometry = [
    "duckdb>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/bradrichardson/overture-geocode"
Repository = "https://github.com/bradrichardson/overture-geocode"

[tool.hatch.build.targets.wheel]
packages = ["overture_geocoder"]
