[package]
name = "geocoder-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for testing the Overture geocoder"

[[bin]]
name = "geocoder"
path = "src/main.rs"

[dependencies]
geocoder-core = { path = "../geocoder-core", features = ["native"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
